tests/support/validation/invalid/block_with_invalid_garages/blocks.blk
VSC;hba11011;Weekday   ; 0;02;BUS12021  ;Albny   ;Albany Weekday REMAKE
BLK;    invalid_garage;   4484646;12345  ;fake_garage ;0415a;wtryd ;0430a;kenbs ;0858a;albny ;0919a;    ;    ;        ;011;;
